# aita

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: test.yaml  test_api.yaml  test_nlp.yaml
aita/: Dockerfile  main.py  pyproject.toml
aita/aita/: config.py  main.py  style.py
aita/aita/api/: command.py  posts.py  style.py
aita/aita/reddit/: command.py  config.py  connect.py  posts.py  style.py
api/: .vimspector.json  Dockerfile  Makefile  pyproject.toml  requirements.txt  start.sh
api/alembic/versions/: 22022a3f6df1_add_timestamp_column.py  8d1063ecfa01_initial_commit.py
api/app/: __init__.py  __main__.py  main.py
api/app/api/api_v1/: api.py  routes.py
api/app/api/api_v1/endpoints/: info.py  posts.py  predict.py
api/app/api/api_v1/endpoints/reddit/: __init__.py  info.py  label.py  sync.py
api/app/api/v1/: routes.py
api/app/api/v1/resources/: __init__.py  info.py  posts.py  sync.py
api/app/core/: config.py  constants.py  event_handlers.py  exceptions.py  middleware.py
api/app/core/services/: predict.py  reddit.py
api/app/core/services/classifiers/: dummy.py
api/app/db/: database.py  session.py
api/app/db/dal/: base.py  posts.py
api/app/db/migrations/: env.py
api/app/db/migrations/versions/: 22022a3f6df1_add_timestamp_column.py  8d1063ecfa01_initial_commit.py  e71ea7c4c98d_.py
api/app/db/tables/: __init__.py  post.py  posts.py
api/app/models/: post.py
api/app/schemas/: __init__.py  base.py  model.py  post.py  reddit.py
api/app/services/: debug.py  model.py  reddit.py
api/requirements/: dev-requirements.txt  development.txt  production.txt  requirements.in  requirements.txt
api/tests/: conftest.py
api/tests/api/: test_info.py  test_posts.py  test_reddit.py
cli/: Dockerfile  README.md  pyproject.toml
cli/aita/: main.py  style.py
cli/aita/api/: commands.py  posts.py
cli/aita/model/: commands.py
cli/aita/reddit/: commands.py  config.py  posts.py
cli/tests/: test_cli.py
nlp/: Makefile  README.md  pyproject.toml
nlp/data/: README.md
nlp/data/configs/: .gitignore  base.cfg
nlp/nlp/: __main__.py  cli.py  http.py  io.py  model.py  paths.py  transform.py  utils.py
nlp/requirements/: dev-requirements.txt  requirements.in  requirements.txt
nlp/tests/: conftest.py  test_cli.py  test_http.py  test_io.py  test_model.py  test_nlp.py  test_paths.py  test_transform.py  test_utils.py
web/: Dockerfile  README.md  nuxt.config.js  package-lock.json  package.json  readme.md
web/layouts/: default.vue
web/pages/: index.vue
web/pages/check/: index.vue
web/pages/random/: index.vue
web/store/: story.js
