[tool.poetry]
name = "api"
version = "0.1.0"
description = "Fastapi api for processing reddit posts from /r/AmItheAsshole"
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
orm = "^0.3.0"
asyncpg = "^0.25.0"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.2"
loguru = "^0.5.3"
alembic = "^1.7.5"
asyncpraw = "^7.5.0"
gunicorn = "^20.1.0"
requests = "^2.26.0"
debugpy = "^1.5.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
