[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for processing reddit posts from /r/AmItheAsshole"
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
orm = "^0.3.0"
asyncpg = "^0.25.0"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.2"
loguru = "^0.5.3"
alembic = "^1.7.5"
asyncpraw = "^7.5.0"
gunicorn = "^20.1.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
spacy = "^3.2.0"
fastapi-pagination = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
pytest-asyncio = "^0.18.3"
httpx = "^0.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
plugins = 'sqlalchemy.ext.mypy.plugin'
exclude = ['app/db/migrations/', 'tests/']
