[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Logan Connolly <logan.connolly@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.2.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.2"}
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aoc"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.run]
source = ["nlp/"]
omit = ["nlp/__main__.py"]

[tool.coverage.report]
skip_covered = true
show_missing = true
ignore_errors = true
fail_under = 100
exclude_lines = ['def __repr__', 'class .*\bProtocol\):']
